--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.adoc
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.adoc
@@ -50,6 +50,21 @@ cite:[uguralAdvancedMechanicsMaterials2019]
 [#sec-nomenclature, {counter:nomenclature}]
 == Nomenclature
 
+[stem#eq-nomenclature, reftext="Eq. {secs}-{counter:eqs}"]
+++++
+\begin{align}
+    \tau &= \text{shear stress}\\
+    \theta &= \text{angular displacement}\\
+    a &= \text{height of the hexagonal cross section}\\
+    b & = \text{base of rectangular cross section}\\
+    h &= \text{height of rectangular cross section}\\
+    F &= \text{force applied at the end of the handle}\\
+    M &= \text{resultant moment from the force applied to the handle}\\
+    T &= \text{torque applied to the shaft}\\
+    y &= \text{distance from neutral axis for bending stress}\\
+    G &= \text{shear modulus}
+\end{align}
+++++
 == Introduction
 As the consumption of soda continues to increase internationally, landfills are being overwhelmed by the number of empty cans produced. To counteract the volumetric deman of waste faciliti
 
@@ -62,7 +77,9 @@ As the consumption of soda continues to increase internationally, landfills are 
 
 [#sec-synthesis, {counter:synthesis}]
 == Sythesis of the Design
-stem:[\sigma_y = \frac{1}{2}]
+
+
+
 [#sec-design, {counter:design}]
 == Deisgn Analysis and Optimization
 
@@ -73,7 +90,7 @@ For analyzing the design of the can crushing mechanism, the analysis was broken 
 ==== Shaft Cross-Section
 From Table 6.2 in cite:[uguralAdvancedMechanicsMaterials2019], the equations for the maximum shear stress, stem:[\tau_A], and angular deflection, stem:[\theta],  for a hexagonal cross section similar xref:Fig-1[] to are provided:
 
-image::./images/shaft_cross_section.png[caption=<span class="figgynumber">Figure {secs}-{counter:figs}. </span>, reftext="Fig. {secs}-{figs}"]
+INCLUDE IMAGE OF THE HEXAGONAL CROSS SECTION
 [stem#eq-hex-cross-section, reftext="Eq. {secs}-{counter:eqs}"]
 ++++
 \begin{align}
@@ -84,7 +101,7 @@ image::./images/shaft_cross_section.png[caption=<span class="figgynumber">Figure
 
 where stem:[T] is the applied torque, stem:[a] is the height of the hexagon, and stem:[G] is the modulus of rigidity. From the geometry of the shaft, stem:[a] is equal to 1 inch. For AISI 316, the shear modulus is 78GPa. For an applied torque of 220lbf·in, the maximum shear stress is predicted to be 8.646MPa which closely matches the FEA results. Furthermore, the maximum predicted deflection is 2.05 milliradians. The delfection of the rod predicted via this equation is not comparable to the FEA results since the effects of the fly wheel prevent some of the deflection that would be experienced by the shaft. 
 
-=== Handle
+==== Handle
 The handle of the mechanism is subject to a moment produced by the force applied to the handle. Since the cross section of the bar is rectangular, the standard equation for bending applied. At the end of the handle a force of 20 pounds force is applied. The handle has a length of 11 inches with a cross section of 0.75 inches by 0.6 inches. Using the equation for bending stress at point A on the cross section:
 
 [stem#eq-rect-cross-section, reftext="Eq. {secs}-{counter:eqs}"]
@@ -96,7 +113,7 @@ The handle of the mechanism is subject to a moment produced by the force applied
 
 where stem:[M = 20\text{lb}_f*10.125\text{inch} = 202.5\text{lb}_f\cdot\text{inch}], stem:[y = 0.375\text{inch}], and stem:[I = \frac{1}{12}(0.6\text{inch})(0.75\text{inch})^3]. This gives a maximum normal stress of 24.8MPa. Once again, this closely matches the results determined in the FEA analysis near the point of interest. 
 
-=== Conclusions
+==== Conclusions
 Within the brief analytical work conducted, both the shear stress in the shaft and the maximum normal stress are both well below the limits of the material. For the fly wheel, a FEA approach is employed due to the complex geometry of the contact surface with the can. The checks provided by the analytical work confirm that the FEA results are close to the predicted values. 
 
 INCLUDE FIGURE OF THE HANDLE
@@ -104,7 +121,8 @@ INCLUDE FIGURE OF THE HANDLE
 === Finite Element Analysis
 
 [#sec-conclusions, {counter:conclusions}]
-== Conclustions
+== Conclusions
+
 
 // [appendix#sec-appendix-Figures]
 // == Figures
