--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
@@ -1,4 +1,18 @@
 
+@article{jovicevic-klugComparativeStudyConventional2020,
+  title = {Comparative Study of Conventional and Deep Cryogenic Treatment of {{AISI M3}}:2 ({{EN}} 1.3395) High-Speed Steel},
+  shorttitle = {Comparative Study of Conventional and Deep Cryogenic Treatment of {{AISI M3}}},
+  author = {{Jovi{\v c}evi{\'c}-Klug}, Patricia and Podgornik, Bojan},
+  year = {2020},
+  month = sep,
+  journal = {Journal of Materials Research and Technology},
+  volume = {9},
+  pages = {13118--13127},
+  doi = {10.1016/j.jmrt.2020.09.071},
+  abstract = {High-speed steel Mechanical properties Fatigue resistance Tribology a b s t r a c t This study focuses on the changes in mechanical and tribological properties of selected AISI M3:2 high-speed steel when exposed to deep cryogenic treatment (DCT). At the same time, it provides a comparative study of DCT effectiveness on two different steel grades (AISI M3:2 and AISI M2). The impact of DCT is determined by comparing mechanical and tribological properties of selected steels when exposed to conventional vacuum heat treatment and heat treatment comprising DCT. The properties investigated include hardness, fracture toughness, fatigue resistance under cycling bending as well as abrasive wear resistance. This study is also one of the first to disclose the influence of DCT on the properties of M3:2 steel. The results of this investigation show that DCT positively influences both steels, exhibiting higher fracture toughness, improved fatigue resistance and conditionally better wear resistance, while inducing minimal changes in hardness. This study also provides an input on the influence Co dynamics in DCT treated steels, at which the Co grade steel shows improvement of its properties with DCT.},
+  file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\2GNQPD5U\\Jovičević-Klug and Podgornik - 2020 - Comparative study of conventional and deep cryogen.pdf}
+}
+
 @book{uguralAdvancedMechanicsMaterials2019,
   title = {Advanced {{Mechanics}} of {{Materials}} and {{Applied Elasticity}} ({{International Series}} in the {{Physical}} and {{Chemical Engineering Sciences}})},
   author = {Ugural, Ansel and Fenster, Saul},
