--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
@@ -10,3 +10,7 @@
   isbn = {978-0-13-485928-6}
 }
 
+@article{christensenman,
+  title={Man-Systems Integration Standards NASA-STD-3000, Volume II Revision B, July 1995},
+  author={Christensen, Julien M and McBarron, James W and McConville, John T and Pogue, William R and Williges, Robert C and Woodson, Wesley E}
+}
