updated .bib and added literature figures.

--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
@@ -1,4 +1,46 @@
 
+@article{jovicevic-klugComparativeStudyConventional2020,
+  title = {Comparative Study of Conventional and Deep Cryogenic Treatment of {{AISI M3}}:2 ({{EN}} 1.3395) High-Speed Steel},
+  shorttitle = {Comparative Study of Conventional and Deep Cryogenic Treatment of {{AISI M3}}},
+  author = {{Jovi{\v c}evi{\'c}-Klug}, Patricia and Podgornik, Bojan},
+  year = {2020},
+  month = sep,
+  journal = {Journal of Materials Research and Technology},
+  volume = {9},
+  pages = {13118--13127},
+  doi = {10.1016/j.jmrt.2020.09.071},
+  abstract = {High-speed steel Mechanical properties Fatigue resistance Tribology a b s t r a c t This study focuses on the changes in mechanical and tribological properties of selected AISI M3:2 high-speed steel when exposed to deep cryogenic treatment (DCT). At the same time, it provides a comparative study of DCT effectiveness on two different steel grades (AISI M3:2 and AISI M2). The impact of DCT is determined by comparing mechanical and tribological properties of selected steels when exposed to conventional vacuum heat treatment and heat treatment comprising DCT. The properties investigated include hardness, fracture toughness, fatigue resistance under cycling bending as well as abrasive wear resistance. This study is also one of the first to disclose the influence of DCT on the properties of M3:2 steel. The results of this investigation show that DCT positively influences both steels, exhibiting higher fracture toughness, improved fatigue resistance and conditionally better wear resistance, while inducing minimal changes in hardness. This study also provides an input on the influence Co dynamics in DCT treated steels, at which the Co grade steel shows improvement of its properties with DCT.},
+  file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\2GNQPD5U\\Jovičević-Klug and Podgornik - 2020 - Comparative study of conventional and deep cryogen.pdf}
+}
+
+@article{novyGigacycleFatigueEndurance2013,
+  title = {Gigacycle {{Fatigue Endurance}} of {{Marine Grade Stainless Steels}} with {{Corrosion Pits}}},
+  author = {Nov{\'y}, Franti{\v s}ek and Zatkal{\'i}kov{\'a}, Viera and Bok{\r{u}}vka, Otakar and Mikov{\'a}, Katar{\'i}na},
+  year = {2013},
+  journal = {Per. Pol. Transp. Eng.},
+  volume = {41},
+  number = {2},
+  pages = {99},
+  issn = {0303-7800, 1587-3811},
+  doi = {10.3311/PPtr.7109},
+  abstract = {The fatigue resistance of commercial AISI 316L and AISI 316Ti austenitic stainless steels after corrosion attack by aggressive chloride-containing environment was examined with the aim to explore the influence of pitting corrosion on their fatigue resistance. The fatigue resistance after corrosion attack was found to be significantly reduced due to the occurrence of corrosion pits on the surface of tested specimens. The obtained results were compared with results predicted using empirical model given by Murakami. It was found that the fatigue limit of the tested steels with pitting corrosion, predicted according to empirical model proposed by Murakami, is much higher than real fatigue limit experimentally determined.},
+  langid = {english},
+  file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\ZGURGCSH\\Nový et al. - 2013 - Gigacycle Fatigue Endurance of Marine Grade Stainl.pdf}
+}
+
+@article{okazakiCorrosionFatigueProperties2002,
+  title = {Corrosion {{Fatigue Properties}} of {{Metallic Biomaterials}} in {{Eagle}}'s {{Medium}}},
+  author = {Okazaki, Yoshimitsu and Gotoh, Emiko},
+  year = {2002},
+  month = dec,
+  journal = {Materials Transactions - MATER TRANS},
+  volume = {43},
+  pages = {2949--2955},
+  doi = {10.2320/matertrans.43.2949},
+  abstract = {The corrosion fatigue properties under sine wave loading in Eagle's medium were compared among various metallic biomaterials: SUS-316L stainless steel, Co-Cr-Mo cast alloy and three types of vanadium-free titanium alloy, namely {$\alpha$} + {$\beta$} type Ti-6Al-7Nb, Ti-6Al-2Nb-1Ta and a variety of newly developed Ti-15Zr-4Ta-4Nb alloys. The number of cycles to failure for the SUS-316L stainless steel and Co-Cr-Mo cast alloy increased as the maximum stress decreased. The fatigue strengths of the SUS-316L stainless steel and Co-Cr-Mo cast alloy at 1 \texttimes{} 108 cycles were much lower than those of the titanium alloys. The fatigue strengths of the vanadium-free Ti-6Al-7Nb and Ti-6Al-2Nb-1Ta alloys at 1 \texttimes{} 108 cycles were approximately 600 and 720 MPa, respectively. The fatigue strengths of the Ti-15Zr-4Nb-4Ta alloys annealed at 700\textdegree C for 2 h were about 700 MPa at 1 \texttimes{} 108 cycles, and were not significantly affected by varying the frequency from 2 to 10 Hz. Aging of the Ti-15Zr-4Nb-4Ta alloy containing 0.2\%O and 0.05\%N after solution treatment increased its ultimate tensile strength to 1150 MPa, and the total elongation and reduction in the area were 15 and 50\%, respectively. The fatigue strength of the Ti-15Zr-4Ta-4Nb alloy treated in this way was 880 MPa under sine wave loading of 10 Hz at 1 \texttimes{} 108 cycles. This strength proved to be nearly identical to that estimated for the human hip joint, following an analysis of its movements and the forces acting upon it in vivo. The fatigue strength ratios at 1 \texttimes{} 108 cycles to ultimate tensile strength of the SUS-316L stainless steel and Co-Cr-Mo cast alloy were about 50\%. The fatigue strength ratio at 1 \texttimes{} 108 cycles to ultimate tensile strength of the Ti-6Al-2Nb-1Ta alloy was high at 75\%. In the case of the Ti-15Zr-4Nb-4Ta alloy annealed or aged after solution treatment, the fatigue strength ratio to ultimate tensile strength was about 75\%. Many striations and cracks caused by fatigue were visible on the fatigue-fractured surfaces of the SUS-316L stainless steel and Co-Cr-Mo cast alloy. Micro-cracks in dimples were also apparent on the fatigue-fractured surface of the titanium alloys.},
+  file = {C\:\\Users\\jmanthony1\\Zotero\\storage\\DSBK9LIX\\Okazaki and Gotoh - 2002 - Corrosion Fatigue Properties of Metallic Biomateri.pdf}
+}
+
 @book{uguralAdvancedMechanicsMaterials2019,
   title = {Advanced {{Mechanics}} of {{Materials}} and {{Applied Elasticity}} ({{International Series}} in the {{Physical}} and {{Chemical Engineering Sciences}})},
   author = {Ugural, Ansel and Fenster, Saul},
@@ -10,7 +52,4 @@
   isbn = {978-0-13-485928-6}
 }
 
-@article{christensenman,
-  title={Man-Systems Integration Standards NASA-STD-3000, Volume II Revision B, July 1995},
-  author={Christensen, Julien M and McBarron, James W and McConville, John T and Pogue, William R and Williges, Robert C and Woodson, Wesley E}
-}
+
