--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.bib
@@ -52,4 +52,18 @@
   isbn = {978-0-13-485928-6}
 }
 
+ @misc{epa, 
+  url={https://www.epa.gov/facts-and-figures-about-materials-waste-and-recycling/aluminum-material-specific-data}, 
+  journal={EPA}, 
+  publisher={Environmental Protection Agency}
+} 
 
+@article{buza2014can,
+  title={Can Crusher Design in Response to Environmental Concerns},
+  author={Buza, Sh and Buza, K and Pllana, BSc Krenar},
+  journal={Journal of Trends in the Development of Machinery and Associated Technology},
+  volume={18},
+  number={1},
+  pages={179--182},
+  year={2014}
+}
