--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.adoc
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.adoc
@@ -43,7 +43,9 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 
 // *Keywords:* _{keywords}_
 
-
+:!subs:
+:!figs:
+:!tabs:
 
 [#sec-intro, {counter:secs}]
 
@@ -66,15 +68,13 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 \end{align*}
 ++++
 == Introduction
-As the consumption of soda continues to increase internationally, landfills are being overwhelmed by the number of empty cans produced. To counteract the volumetric deman of waste facilities, the 
+As the consumption of soda continues to increase internationally, landfills are being overwhelmed by the number of empty cans produced. Current estimates by the EPA predict that 1.9 millions tons of aluminum are produced as beverage packaging cite:[epa]. To improve the ability to transport the cans to either a recycling facility or a landfill, the reduction of volume decrease the required space and increase the ability to transport more cans in a single delivery. Creating can crushing mechanisms are either human-powered or complex electro-mechanical machines. The human aspect of the design encourages people to be engaged in the recycling process and be conscious of their choices. However, creating a device capable of being electrically driven allows for the process to be automated and provide a possible means of high throughput crushing.
 
-:!subs:
-:!figs:
-:!tabs:
+In the design of the device, an analysis of similar can crushing devices was performed to understand the required features for the desired device. Next, the design was formulated and components were selected from common part providers or were designed to be easily fabricated. To ensure the feasability of the design and materials selection, an analytical analysis of two key points was conducted along with a finite element analysis (FEA) of the entire system at the maximum crushing force fo the can. Lastl, a comparison of the FEA results with the fatigue life of the components ensures that the devices meets the requirements for an infite life design. 
 
 [#sec-development, {counter:development}]
 == Development of Engineering Specifications
-To develop the specifications for the design, several considerations were made to ensure that the design would be constructed effectively and within the limits of human strength. First, the average pulling force for a human was determined to be 20 lbf which is consistent with NASA standards cite:[christensenman]. In an effort to reduce the environmental impact of the design, the additional constraint of purchasing as many parts as possible without requiring custom fabricated parts. In the final design, less than half of the parts required were custom designed. The remainder were able to be purchased from McMaster-Carr. To determine the required crushing force for an aluminum beverage can, six uniaxial compression tests were conducted and the results are shown in xref:fig-can_plot[]. The avereage maximum crushing force was found to be approximately 1.3kN to reduce the can to 20% of the original volume. For the dimensions of an aluminum beverage can, the can was considered to have an original height of 157mm and to achieve 80% reduction in volume, the can would need to be deformed to a thickness of 31.4mm. The dimensions of the can were determined via measurements taken from the beverage cans used in the compression tests. Furthermore, from the project instructions, the final design was required to have te ability to be either mechanically or electrically driven. Additionally, the requirement of having the crushing mechanism automatically reload was added to improve the total throughput of the cans to be crushed. The metric for the human force and crushing force are determined via mechanical analysis. For the material selection, the commeercially listed for the components will be used in the design.
+To develop the specifications for the design, several considerations were made to ensure that the design would be constructed effectively and within the limits of human strength. First, the average pulling force for a human was determined to be 20 lbf which is consistent with NASA standards cite:[christensenman]. In an effort to reduce the environmental impact of the design, the additional constraint of purchasing as many parts as possible without requiring custom fabricated parts. In the final design, less than half of the parts required were custom designed. The remainder were able to be purchased from McMaster-Carr. To determine the required crushing force for an aluminum beverage can, six uniaxial compression tests were conducted and the results are shown in xref:fig-can_plot[]. The avereage maximum crushing force was found to be approximately 1.3kN to reduce the can to 20% of the original volume. For the dimensions of an aluminum beverage can, the can was considered to have an original height of 157mm and to achieve 80% reduction in volume, the can would need to be deformed to a thickness of 31.4mm. The dimensions of the can were determined via measurements taken from the beverage cans used in the compression tests. Furthermore, from the project instructions, the final design was required to have te ability to be either mechanically or electrically driven. Additionally, the requirement of having the crushing mechanism automatically reload was added to improve the total throughput of the cans to be crushed. The metric for the human force and crushing force are determined via mechanical analysis. For the material selection, the commercially listed for the components will be used in the design.
 
 [#fig-can_plot]
 .Results from crushing six different aluminum soda cans with the regions of buckling and maximum force denoted. 
@@ -85,10 +85,6 @@ image::./compression_results.png[caption=<span class="figgynumber">Figure {secs}
 == Sythesis of the Design
 In creating the final design of the system, several commercially and custom fabricated can crushing solutions were considered. While the common handle driven can crushing system as shown in xref:fig-handle_fbd[]
 
-[#fig-handle_fbd]
-.FBD for the handle to determine the maximum bending stress at the connection.
-// image::./handle.png[width = 20, caption=<span class="figgynumber">Figure {secs}-{counter:figs}. </span>, reftext="Fig. {secs}-{figs}"]
-image::./handle.png[caption=<span class="figgynumber">Figure {secs}-{counter:figs}. </span>, reftext="Fig. {secs}-{figs}"]
 
 [#sec-design, {counter:design}]
 == Deisgn Analysis and Optimization
@@ -98,14 +94,12 @@ For analyzing the design of the can crushing mechanism, the analysis was broken 
 === Analytical Methods
 
 ==== Shaft Cross-Section
-From Table 6.2 in cite:[uguralAdvancedMechanicsMaterials2019], the equations for the maximum shear stress, stem:[\tau_A], and angular deflection, stem:[\theta],  for a hexagonal cross section similar xref:fig-5-problem_statement[] to are provided:
 
-INCLUDE IMAGE OF THE HEXAGONAL CROSS SECTION
-
-[#fig-5-problem_statement]
+[#fig-hex_cross_section]
 .Figure Caption
 image::./shaft_cross_section.png[caption=<span class="figgynumber">Figure {secs}-{counter:figs}. </span>, reftext="Fig. {secs}-{figs}"]
 
+From Table 6.2 in cite:[uguralAdvancedMechanicsMaterials2019], the equations for the maximum shear stress, stem:[\tau_A], and angular deflection, stem:[\theta], for a hexagonal cross section. The free body diagram for the torque applied to the shaft is shown in xref:fig-hex_cross_section[]. To calculate the shear stress and angular deflection, the equations for shear stress and deflection from the textbook cite:[uguralAdvancedMechanicsMaterials2019] :
 
 [stem#eq-hex-cross-section, reftext="Eq. {secs}-{counter:eqs}"]
 ++++
@@ -118,7 +112,13 @@ image::./shaft_cross_section.png[caption=<span class="figgynumber">Figure {secs}
 where stem:[T] is the applied torque, stem:[a] is the height of the hexagon, and stem:[G] is the modulus of rigidity. From the geometry of the shaft, stem:[a] is equal to 1 inch. For AISI 316, the shear modulus is 78GPa. For an applied torque of 220lbf·in, the maximum shear stress is predicted to be 8.646MPa which closely matches the FEA results. Furthermore, the maximum predicted deflection is 2.05 milliradians. The delfection of the rod predicted via this equation is not comparable to the FEA results since the effects of the fly wheel prevent some of the deflection that would be experienced by the shaft. 
 
 ==== Handle
-The handle of the mechanism is subject to a moment produced by the force applied to the handle. Since the cross section of the bar is rectangular, the standard equation for bending applied. At the end of the handle a force of 20 pounds force is applied. The handle has a length of 11 inches with a cross section of 0.75 inches by 0.6 inches. Using the equation for bending stress at point A on the cross section:
+The handle of the mechanism is subject to a moment produced by the force applied to the handle(see xref:fig-handle_fbd[]]). Since the cross section of the bar is rectangular, the standard equation for bending applied. At the end of the handle a force of 20 pounds force is applied. The handle has a length of 11 inches with a cross section of 0.75 inches by 0.6 inches. Using the equation for bending stress at point A on the cross section:
+
+[#fig-handle_fbd]
+.FBD for the handle to determine the maximum bending stress at the connection.
+// image::./handle.png[width = 20, caption=<span class="figgynumber">Figure {secs}-{counter:figs}. </span>, reftext="Fig. {secs}-{figs}"]
+image::./handle.png[caption=<span class="figgynumber">Figure {secs}-{counter:figs}. </span>, reftext="Fig. {secs}-{figs}"]
+
 
 [stem#eq-rect-cross-section, reftext="Eq. {secs}-{counter:eqs}"]
 ++++
@@ -132,7 +132,6 @@ where stem:[M = 20\text{lb}_f*10.125\text{inch} = 202.5\text{lb}_f\cdot\text{inc
 ==== Conclusions
 Within the brief analytical work conducted, both the shear stress in the shaft and the maximum normal stress are both well below the limits of the material. For the fly wheel, a FEA approach is employed due to the complex geometry of the contact surface with the can. The checks provided by the analytical work confirm that the FEA results are close to the predicted values. 
 
-INCLUDE FIGURE OF THE HANDLE
 
 === Finite Element Analysis
 
